# ds223-5-project

./: Buddhism Outline.docx  Dockerfile  README.md
app/: docker-compose.yml  main.py
app/api/: api.py
app/api/endpoints/: influencers.py
app/backend/: Dockerfile  docker-compose.yml  main.py  requirements.txt
app/backend/api/: api.py
app/backend/api/endpoints/: brands.py  contact_requests.py  influencers.py  matches.py  past_collaborations.py
app/backend/db/: __init__.py  connection.py  crud.py  loader.py
app/backend/schemas/: brand.py  contact_request.py  influencer.py  match.py  past_collaboration.py
app/core/: config.py
app/db/: README.md
app/db/init/: 001_create_tables.sql
app/ds/: Dockerfile  README.md  data_understanding_and_modeling.md  docker-compose.yml  eda_modeling.py  requirements.txt
app/ds/docs/: data_understanding_and_modeling.md  synthetic_data_manifest.json
app/ds/outputs/: baseline_model_comparison.csv  correlation_matrix.csv  eda_summary.json  modeling_dataset.csv  null_counts.csv
app/ds/src/: eda_modeling.py
app/front/: BACKEND_DATA_REQUIREMENTS.md  Dockerfile  README.md  bandit_utils.py  main.py  pyproject.toml  ui_core.py
app/front/pages/: 1_Create_Carousels.py  1_Discover.py  2_Interaction.py  2_My_Matches.py  3_Analytics.py  3_My_Profile.py
app/schemas/: brand.py
milestone_1/: index.html
